<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tarefa_I_3_a10jesuslb">

    <TextView
            android:id="@+id/tvTexto"
            android:text="@string/tvTexto" android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnDialogMensaxe"
            android:layout_below="@id/tvTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogMensaxe"
            android:onClick="xenerico"
            />
    <Button
            android:id="@+id/btnDialogBotons"
            android:layout_below="@id/btnDialogMensaxe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogBotons"
            android:onClick="xenerico"
            />
    <Button
            android:id="@+id/btnLista"
            android:layout_below="@id/btnDialogBotons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista"
            android:onClick="xenerico"
            />
    <Button
            android:id="@+id/btnUnica"
            android:layout_below="@id/btnLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unica"
            android:onClick="xenerico"
            />
    <Button
            android:id="@+id/btnMultiple"
            android:layout_below="@id/btnUnica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple"
            android:onClick="xenerico"
            />
    <Button
            android:id="@+id/btnDialogoTexto"
            android:layout_below="@id/btnMultiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dailogtexto"
            android:onClick="xenerico"
            />

</RelativeLayout>
